--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -10,7 +10,7 @@
   <meta name="title" content="La Queijada — Pizzas de qualidade">
   <meta name="description" content="Querendo comer uma pizza? Peça a sua imediatamente na melhor pizzaria do Brasil!">
   <link rel="shortcut icon" href="https://img.icons8.com/external-victoruler-flat-gradient-victoruler/50/000000/external-pizza-food-and-delivery-victoruler-flat-gradient-victoruler.png" type="image/x-icon">
-  <meta name="theme-color" content="#2A7AE4">
+  <meta name="theme-color" content="#ffffff">
   
   <!-- Styles -->
   <link rel="stylesheet" href="../../public/styles/global.css">
@@ -18,17 +18,17 @@
   
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://metatags.io/">
+  <meta property="og:url" content="https://darrow12.github.io/La-Queijada/src/pages/">
   <meta property="og:title" content="La Queijada — Pizzas de qualidade">
   <meta property="og:description" content="Querendo comer uma pizza? Peça a sua imediatamente na melhor pizzaria do Brasil!">
-  <meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+  <meta property="og:image" content="https://raw.githubusercontent.com/darrow12/La-Queijada/main/public/images/la-queijada.png">
   
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://metatags.io/">
+  <meta property="twitter:url" content="https://darrow12.github.io/La-Queijada/src/pages/">
   <meta property="twitter:title" content="La Queijada — Pizzas de qualidade">
   <meta property="twitter:description" content="Querendo comer uma pizza? Peça a sua imediatamente na melhor pizzaria do Brasil!">
-  <meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+  <meta property="twitter:image" content="https://raw.githubusercontent.com/darrow12/La-Queijada/main/public/images/la-queijada.png">
   
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -36,6 +36,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Sora:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1>hello world</h1>
+  <header>
+    <h1>La Que<span class="yellow">i</span><span class="red">j</span><span class="green">a</span>da</h1>
+  </header>
 </body>
 </html>
