--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -15,6 +15,7 @@
   <!-- Styles -->
   <link rel="stylesheet" href="../../public/styles/global.css">
   <link rel="stylesheet" href="../../public/styles/page-landing.css">
+  <link rel="stylesheet" href="../../public/styles/cards.css">
   
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
@@ -39,5 +40,43 @@
   <header>
     <h1>La Que<span class="yellow">i</span><span class="red">j</span><span class="green">a</span>da</h1>
   </header>
+
+  <main>
+    <h2>Mais vendidas</h2>
+    <div class="pizzas-to-buy">
+      <div class="la-cuma">
+        <img class="cuma" src="../../public/images/la-cuma.png" alt="">
+        <h4>La Cuma</h4>
+        <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+        <h3>R$ 23</h3>
+        <button>Comprar agora</button>
+      </div>
+      <div class="la-menta">
+        <img class="menta" src="../../public/images/la-menta.png" alt="">
+        <h4>La Menta</h4>
+        <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+        <h3>R$ 23</h3>
+        <button>Comprar agora</button>
+      </div>
+      <div class="la-bana">
+        <img class="bana" src="../../public/images/la-bana.png" alt="">
+        <h4>La Bana</h4>
+        <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+        <h3>R$ 23</h3>
+        <button>Comprar agora</button>
+      </div>
+      <div class="la-toca">
+        <img class="toca" src="../../public/images/la-toca.png" alt="">
+        <h4>La Toca</h4>
+        <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+        <h3>R$ 23</h3>
+        <button>Comprar agora</button>
+      </div>
+    </div>
+
+
+    <!-- Images around -->
+    <img class="plant" src="../../public/images/plant.png" alt="plant image">
+  </main>
 </body>
 </html>
