✅ About section completed

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="../../public/styles/global.css">
   <link rel="stylesheet" href="../../public/styles/page-landing.css">
   <link rel="stylesheet" href="../../public/styles/cards.css">
+  <link rel="stylesheet" href="../../public/styles/about.css">
   
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
@@ -45,28 +46,28 @@
     <h2>Mais vendidas</h2>
     <div class="pizzas-to-buy">
       <div class="la-cuma">
-        <img class="cuma" src="../../public/images/la-cuma.png" alt="">
+        <img class="cuma" src="../../public/images/la-cuma.png" alt="Imagem da Pizza: La Cuma">
         <h4>La Cuma</h4>
         <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
         <h3>R$ 23</h3>
         <button>Comprar agora</button>
       </div>
       <div class="la-menta">
-        <img class="menta" src="../../public/images/la-menta.png" alt="">
+        <img class="menta" src="../../public/images/la-menta.png" alt="Imagem da Pizza: La Menta">
         <h4>La Menta</h4>
         <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
         <h3>R$ 23</h3>
         <button>Comprar agora</button>
       </div>
       <div class="la-bana">
-        <img class="bana" src="../../public/images/la-bana.png" alt="">
+        <img class="bana" src="../../public/images/la-bana.png" alt="Imagem da Pizza: La Menta">
         <h4>La Bana</h4>
         <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
         <h3>R$ 23</h3>
         <button>Comprar agora</button>
       </div>
       <div class="la-toca">
-        <img class="toca" src="../../public/images/la-toca.png" alt="">
+        <img class="toca" src="../../public/images/la-toca.png" alt="Imagem da Pizza: La Toca">
         <h4>La Toca</h4>
         <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
         <h3>R$ 23</h3>
@@ -74,9 +75,28 @@
       </div>
     </div>
 
+    <div id="about">
+      <div class="about">
 
-    <!-- Images around -->
-    <img class="plant" src="../../public/images/plant.png" alt="plant image">
+        <img class="restaurant" src="../../public/images/restaurant.png" alt="Imagem do restaurante La Queijada">
+        <img class ="circle" src="../../public/images/circle.svg" alt="">
+        <img class="pizza1" src="../../public/images/pizza-pic-1.png" alt="">
+        <img class="circle2" src="../../public/images/circle-2.svg" alt="">
+        <img class="pizza2" src="../../public/images/pizza-pic-2.png" alt="">
+        <img class="tomato" src="../../public/images/tomato.png" alt="Imagem de um tomate">
+        
+        <h2>Sobre o La Que<span class="yellow">i</span><span class="red">j</span><span class="green">a</span>da</h2>
+        <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce quis justo sem. Donec consequat, nunc a dapibus dapibus, justo dolor tristique tortor, sit amet tincidunt lorem nisl at ex. Cras dolor purus, varius in euismod pretium, finibus nec mi. Curabitur aliquam pharetra lectus in pharetra. Nullam viverra elementum neque quis fermentum.</p>
+        <button>Ler mais</button>
+      </div>
+
+    </div>
+
+
+    <!-- Images around the site -->
+    <div class="images-around">
+      <img class="plant" src="../../public/images/plant.png" alt="Imagem de uma planta">
+    </div>
   </main>
 </body>
 </html>
