✅ Footer section completed

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -92,6 +92,10 @@
 
     </div>
 
+    <footer>
+      <p>TODOS OS DIREITOS RESERVADOS</p>
+    </footer>
+
 
     <!-- Images around the site -->
     <div class="images-around">
