✅ Background images completed

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -45,6 +45,9 @@
   <main>
     <h2>Mais vendidas</h2>
     <div class="pizzas-to-buy">
+      <img class="pepper" src="../../public/images/pepper.png" alt="Imagem de uma pimenta">
+      <img class="mushroom" src="../../public/images/mashroom.png" alt="Imagem de um cogumelo">
+      <img class="pilchard" src="../../public/images/pilchard.png" alt="Imagem de uma sardinha">
       <div class="la-cuma">
         <img class="cuma" src="../../public/images/la-cuma.png" alt="Imagem da Pizza: La Cuma">
         <h4>La Cuma</h4>
@@ -72,28 +75,29 @@
         <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
         <h3>R$ 23</h3>
         <button>Comprar agora</button>
+    <img class="leaf" src="../../public/images/leaf.png" alt="Imagem de uma folha">
+
       </div>
     </div>
-
     <div id="about">
       <div class="about">
 
         <img class="restaurant" src="../../public/images/restaurant.png" alt="Imagem do restaurante La Queijada">
-        <img class ="circle" src="../../public/images/circle.svg" alt="">
-        <img class="pizza1" src="../../public/images/pizza-pic-1.png" alt="">
-        <img class="circle2" src="../../public/images/circle-2.svg" alt="">
-        <img class="pizza2" src="../../public/images/pizza-pic-2.png" alt="">
+        <img class ="circle" src="../../public/images/circle.svg" alt="Círculo branco abaixo da pizza">
+        <img class="pizza1" src="../../public/images/pizza-pic-1.png" alt="Imagem de uma pizza">
+        <img class="circle2" src="../../public/images/circle-2.svg" alt="Círculo abaixo da pizza">
+        <img class="pizza2" src="../../public/images/pizza-pic-2.png" alt="Imagem de uma pizza">
         <img class="tomato" src="../../public/images/tomato.png" alt="Imagem de um tomate">
         
         <h2>Sobre o La Que<span class="yellow">i</span><span class="red">j</span><span class="green">a</span>da</h2>
-        <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce quis justo sem. Donec consequat, nunc a dapibus dapibus, justo dolor tristique tortor, sit amet tincidunt lorem nisl at ex. Cras dolor purus, varius in euismod pretium, finibus nec mi. Curabitur aliquam pharetra lectus in pharetra. Nullam viverra elementum neque quis fermentum.</p>
+        <p class="description">O La Queijada é uma pizzaria que oferece pizzas de extrema qualidade, com ingredientes frescos e saudáveis, de diversos sabores. A pizzaria é muito massa, porque os chefes capricham muito no molho e no recheio, sendo de forma equilibrada: nem muito, nem pouco. Caso esteja de dieta, venha à pizzaria andando, ela é localizada na R. Passos, nº 5, Centro, São Paulo, SP.</p>
         <button>Ler mais</button>
       </div>
 
     </div>
 
     <footer>
-      <p>TODOS OS DIREITOS RESERVADOS</p>
+        <p>TODOS OS DIREITOS RESERVADOS</p>
     </footer>
 
 
