--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,110 +1,207 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Primary Meta Tags -->
-  <title>La Queijada — Pizzas de qualidade</title>
-  <meta name="title" content="La Queijada — Pizzas de qualidade">
-  <meta name="description" content="Querendo comer uma pizza? Peça a sua imediatamente na melhor pizzaria do Brasil!">
-  <link rel="shortcut icon" href="https://img.icons8.com/external-victoruler-flat-gradient-victoruler/50/000000/external-pizza-food-and-delivery-victoruler-flat-gradient-victoruler.png" type="image/x-icon">
-  <meta name="theme-color" content="#ffffff">
-  
-  <!-- Styles -->
-  <link rel="stylesheet" href="../../public/styles/global.css">
-  <link rel="stylesheet" href="../../public/styles/page-landing.css">
-  <link rel="stylesheet" href="../../public/styles/cards.css">
-  <link rel="stylesheet" href="../../public/styles/about.css">
-  
-  <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://darrow12.github.io/La-Queijada/src/pages/">
-  <meta property="og:title" content="La Queijada — Pizzas de qualidade">
-  <meta property="og:description" content="Querendo comer uma pizza? Peça a sua imediatamente na melhor pizzaria do Brasil!">
-  <meta property="og:image" content="https://raw.githubusercontent.com/darrow12/La-Queijada/main/public/images/la-queijada.png">
-  
-  <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://darrow12.github.io/La-Queijada/src/pages/">
-  <meta property="twitter:title" content="La Queijada — Pizzas de qualidade">
-  <meta property="twitter:description" content="Querendo comer uma pizza? Peça a sua imediatamente na melhor pizzaria do Brasil!">
-  <meta property="twitter:image" content="https://raw.githubusercontent.com/darrow12/La-Queijada/main/public/images/la-queijada.png">
-  
-  <!-- Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Sora:wght@300;400;600&display=swap" rel="stylesheet">
-</head>
-<body>
-  <header>
-    <h1>La Que<span class="yellow">i</span><span class="red">j</span><span class="green">a</span>da</h1>
-  </header>
+    <!-- Primary Meta Tags -->
+    <title>La Queijada — Pizzas de qualidade</title>
+    <meta name="title" content="La Queijada — Pizzas de qualidade" />
+    <meta
+      name="description"
+      content="Querendo comer uma pizza? Peça a sua imediatamente na melhor pizzaria do Brasil!"
+    />
+    <link
+      rel="shortcut icon"
+      href="https://img.icons8.com/external-victoruler-flat-gradient-victoruler/50/000000/external-pizza-food-and-delivery-victoruler-flat-gradient-victoruler.png"
+      type="image/x-icon"
+    />
+    <meta name="theme-color" content="#ffffff" />
 
-  <main>
-    <h2>Mais vendidas</h2>
-    <div class="pizzas-to-buy">
-      <img class="pepper" src="../../public/images/pepper.png" alt="Imagem de uma pimenta">
-      <img class="mushroom" src="../../public/images/mashroom.png" alt="Imagem de um cogumelo">
-      <img class="pilchard" src="../../public/images/pilchard.png" alt="Imagem de uma sardinha">
-      <div class="la-cuma">
-        <img class="cuma" src="../../public/images/la-cuma.png" alt="Imagem da Pizza: La Cuma">
-        <h4>La Cuma</h4>
-        <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
-        <h3>R$ 23</h3>
-        <button>Comprar agora</button>
+    <!-- Styles -->
+    <link rel="stylesheet" href="../../public/styles/global.css" />
+    <link rel="stylesheet" href="../../public/styles/page-landing.css" />
+    <link rel="stylesheet" href="../../public/styles/cards.css" />
+    <link rel="stylesheet" href="../../public/styles/about.css" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://darrow12.github.io/La-Queijada/src/pages/"
+    />
+    <meta property="og:title" content="La Queijada — Pizzas de qualidade" />
+    <meta
+      property="og:description"
+      content="Querendo comer uma pizza? Peça a sua imediatamente na melhor pizzaria do Brasil!"
+    />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/darrow12/La-Queijada/main/public/images/la-queijada.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://darrow12.github.io/La-Queijada/src/pages/"
+    />
+    <meta
+      property="twitter:title"
+      content="La Queijada — Pizzas de qualidade"
+    />
+    <meta
+      property="twitter:description"
+      content="Querendo comer uma pizza? Peça a sua imediatamente na melhor pizzaria do Brasil!"
+    />
+    <meta
+      property="twitter:image"
+      content="https://raw.githubusercontent.com/darrow12/La-Queijada/main/public/images/la-queijada.png"
+    />
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Sora:wght@300;400;600&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header>
+      <h1>
+        La Que<span class="yellow">i</span><span class="red">j</span
+        ><span class="green">a</span>da
+      </h1>
+    </header>
+
+    <main>
+      <h2>Mais vendidas</h2>
+      <div class="pizzas-to-buy">
+        <img
+          class="pepper"
+          src="../../public/images/pepper.png"
+          alt="Imagem de uma pimenta"
+        />
+        <img
+          class="mushroom"
+          src="../../public/images/mashroom.png"
+          alt="Imagem de um cogumelo"
+        />
+        <img
+          class="pilchard"
+          src="../../public/images/pilchard.png"
+          alt="Imagem de uma sardinha"
+        />
+        <div class="la-cuma">
+          <img
+            class="cuma"
+            src="../../public/images/la-cuma.png"
+            alt="Imagem da Pizza: La Cuma"
+          />
+          <h4>La Cuma</h4>
+          <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+          <h3>R$ 23</h3>
+          <button>Comprar agora</button>
+        </div>
+        <div class="la-menta">
+          <img
+            class="menta"
+            src="../../public/images/la-menta.png"
+            alt="Imagem da Pizza: La Menta"
+          />
+          <h4>La Menta</h4>
+          <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+          <h3>R$ 23</h3>
+          <button>Comprar agora</button>
+        </div>
+        <div class="la-bana">
+          <img
+            class="bana"
+            src="../../public/images/la-bana.png"
+            alt="Imagem da Pizza: La Menta"
+          />
+          <h4>La Bana</h4>
+          <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+          <h3>R$ 23</h3>
+          <button>Comprar agora</button>
+        </div>
+        <div class="la-toca">
+          <img
+            class="toca"
+            src="../../public/images/la-toca.png"
+            alt="Imagem da Pizza: La Toca"
+          />
+          <h4>La Toca</h4>
+          <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+          <h3>R$ 23</h3>
+          <button>Comprar agora</button>
+          <img
+            class="leaf"
+            src="../../public/images/leaf.png"
+            alt="Imagem de uma folha"
+          />
+        </div>
       </div>
-      <div class="la-menta">
-        <img class="menta" src="../../public/images/la-menta.png" alt="Imagem da Pizza: La Menta">
-        <h4>La Menta</h4>
-        <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
-        <h3>R$ 23</h3>
-        <button>Comprar agora</button>
-      </div>
-      <div class="la-bana">
-        <img class="bana" src="../../public/images/la-bana.png" alt="Imagem da Pizza: La Menta">
-        <h4>La Bana</h4>
-        <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
-        <h3>R$ 23</h3>
-        <button>Comprar agora</button>
-      </div>
-      <div class="la-toca">
-        <img class="toca" src="../../public/images/la-toca.png" alt="Imagem da Pizza: La Toca">
-        <h4>La Toca</h4>
-        <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
-        <h3>R$ 23</h3>
-        <button>Comprar agora</button>
-    <img class="leaf" src="../../public/images/leaf.png" alt="Imagem de uma folha">
+      <div id="about">
+        <div class="about">
+          <img
+            class="restaurant"
+            src="../../public/images/restaurant.png"
+            alt="Imagem do restaurante La Queijada"
+          />
+          <img
+            class="circle"
+            src="../../public/images/circle.svg"
+            alt="Círculo branco abaixo da pizza"
+          />
+          <img
+            class="pizza1"
+            src="../../public/images/pizza-pic-1.png"
+            alt="Imagem de uma pizza"
+          />
+          <img
+            class="circle2"
+            src="../../public/images/circle-2.svg"
+            alt="Círculo abaixo da pizza"
+          />
+          <img
+            class="pizza2"
+            src="../../public/images/pizza-pic-2.png"
+            alt="Imagem de uma pizza"
+          />
+          <img
+            class="tomato"
+            src="../../public/images/tomato.png"
+            alt="Imagem de um tomate"
+          />
 
+          <h2>
+            Sobre o La Que<span class="yellow">i</span><span class="red">j</span
+            ><span class="green">a</span>da
+          </h2>
+          <p class="description">
+            O La Queijada é uma pizzaria que oferece pizzas de extrema
+            qualidade, com ingredientes frescos e saudáveis, de diversos
+            sabores. A pizzaria é muito massa, porque os chefes capricham muito
+            no molho e no recheio, sendo de forma equilibrada: nem muito, nem
+            pouco. Caso esteja de dieta, venha à pizzaria andando, ela é
+            localizada na R. Passos, nº 5, Centro, São Paulo, SP.
+          </p>
+          <button>Ler mais</button>
+        </div>
       </div>
-    </div>
-    <div id="about">
-      <div class="about">
 
-        <img class="restaurant" src="../../public/images/restaurant.png" alt="Imagem do restaurante La Queijada">
-        <img class ="circle" src="../../public/images/circle.svg" alt="Círculo branco abaixo da pizza">
-        <img class="pizza1" src="../../public/images/pizza-pic-1.png" alt="Imagem de uma pizza">
-        <img class="circle2" src="../../public/images/circle-2.svg" alt="Círculo abaixo da pizza">
-        <img class="pizza2" src="../../public/images/pizza-pic-2.png" alt="Imagem de uma pizza">
-        <img class="tomato" src="../../public/images/tomato.png" alt="Imagem de um tomate">
-        
-        <h2>Sobre o La Que<span class="yellow">i</span><span class="red">j</span><span class="green">a</span>da</h2>
-        <p class="description">O La Queijada é uma pizzaria que oferece pizzas de extrema qualidade, com ingredientes frescos e saudáveis, de diversos sabores. A pizzaria é muito massa, porque os chefes capricham muito no molho e no recheio, sendo de forma equilibrada: nem muito, nem pouco. Caso esteja de dieta, venha à pizzaria andando, ela é localizada na R. Passos, nº 5, Centro, São Paulo, SP.</p>
-        <button>Ler mais</button>
-      </div>
-
-    </div>
-
-    <footer>
+      <footer>
         <p>TODOS OS DIREITOS RESERVADOS</p>
-    </footer>
+      </footer>
 
-
-    <!-- Images around the site -->
-    <div class="images-around">
-      <img class="plant" src="../../public/images/plant.png" alt="Imagem de uma planta">
-    </div>
-  </main>
-</body>
+      <img
+        class="plant"
+        src="../../public/images/plant.png"
+        alt="Imagem de uma planta"
+      />
+    </main>
+  </body>
 </html>
